cmake_minimum_required(VERSION 3.19)
set( CMAKE_CXX_STANDARD 17 )
project( feature-patches )
include_directories(/opt/local/include/eigen3)
find_package( OpenCV 4.5 PATHS /opt/local//libexec/opencv4/cmake/ )
find_package(nlohmann_json)
include_directories( ${OpenCV_INCLUDE_DIRS} )
link_directories(/opt/local/lib)
add_compile_options(-Wno-unknown-warning-option)
add_executable( feature-patches feature-patches.cpp )
target_link_libraries( feature-patches ${OpenCV_LIBS} nlohmann_json::nlohmann_json )
add_executable( match-patches match-patches.cpp )
target_link_libraries( match-patches ${OpenCV_LIBS} nlohmann_json::nlohmann_json )
